# Hasktorch-tutorial

./: README.md  cabal.project  default.nix  shell.nix  stack.yaml
data/: download_data.sh
nix/: default.nix  haskell.nix  pkgs.nix  sources.json  stack-shell.nix
tutorials/01-basics/: 01-basics-hasktorch.cabal  basics-hasktorch.cabal
tutorials/01-basics/01-hasktorch-basics/: Main.hs
tutorials/01-basics/02-linear-regression/: Main.hs
tutorials/01-basics/04-feedforward-neural-network/: Main.hs
